tests/e2e/macros/builtin/snapshots/e2e__macros__builtin__derive.snap
---
source: tests/e2e/macros/builtin/mod.rs
description: "// → test_package/cairo_project.toml\n[crate_roots]\ntest_package = \"src\"\n\n[config.global]\nedition = \"2025_12\"\n\n// → test_package/src/lib.cairo\n#[derive(Drop, Serde)]\nstruct A {\n    a: felt252\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[d<caret>erive(Drop, Serde)]
#[derive(Drop,<caret> Serde)]
#[derive(Drop, Serde)]<caret>
struct <caret>A {
"""
generated_code = """
#[derive(Drop, Serde)]
struct A {
    a: felt252,
}
impl ADrop<> of core::traits::Drop<A>;
impl ASerde<> of core::serde::Serde<A> {
    fn serialize(self: @A, ref output: core::array::Array<felt252>) {
        core::serde::Serde::<felt252>::serialize(@self.a, ref output)
    }
    fn deserialize(ref serialized: core::array::Span<felt252>) -> core::option::Option<A> {
        let __serde_member_a = core::internal::InferDestruct::<
            felt252,
        > { value: core::serde::Serde::<felt252>::deserialize(ref serialized)? };
        core::option::Option::Some(A { a: __serde_member_a.value })
    }
}
"""
