tests/e2e/macros/builtin/snapshots/e2e__macros__builtin__inline_assert_macro.snap
---
source: tests/e2e/macros/builtin/mod.rs
expression: report
---
[[expansions]]
analyzed_lines = """
        assert<caret>!(1 == 1, "Failure message");
"""
generated_code = """
// lib.cairo
// ---------

if !(1 == 1) {
    let mut __formatter_for_assert_macro__: core::fmt::Formatter = core::traits::Default::default();
    core::result::ResultTrait::<
        (), core::fmt::Error,
    >::unwrap(write!(__formatter_for_assert_macro__, "Failure message"));
    core::panics::panic_with_byte_array(@__formatter_for_assert_macro__.buffer)
}
"""
